11.14.0 (20-06-2024)
- Improvement: Add more info to the result of debt generation rule execution and if there was a change in data [#qubIT-Fenix-5420] 
- Improvement: Debt generation rule strategy to annul debit entries [#qubIT-Fenix-5420]

11.13.0 (19-06-2024)
- Improvement: Support fixed due date calculation in tariffs [#qubIT-Fenix-5421]

11.12.0 (18-06-2024)
- Refactor: Prepare DebtAccountReportEntryBean to be used in reporting tool [#qubIT-Fenix-5422]

11.11.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

11.10.2 (11-06-2024)
- Refactor: Remove property methods of report bean, not used by any report [#qubIT-Fenix-5276]
- Improvement: Declare property methods in PersonCustomer to get the global due in debt amount [#qubIT-Fenix-5352]

11.10.1 (04-06-2024)
- Bug Fix: Apply payment blocking validation from debt processes, when generating reference codes with academic debt generation rules [#qubIT-Fenix-5130]

11.10.0 (03-06-2024)
- Refactor: Adds academic treasury classes for all web apps from academic treasury ui [#qubIT-Omnis-5875]

11.9.0 (31-05-2024)
- Improvement: Support scheduling for academic debt generation rules [#qubIT-Fenix-5345]

11.8.1 (21-05-2024)
- Bug Fix: Validate if there active customers with same fiscal number, only for active customers in Customer#checkRules [#qubIT-Fenix-5307]

11.8.0 (13-05-2024)
- Refactor: Debit note receive finantial entity and payor debt account [#qubIT-Fenix-4587]
- Refactor: Use ISibsPaymentCodePoolService#getDefaultDigitalPaymentPlatform method, to get default payment code pool for finantial entity [#qubIT-Fenix-4587]
- Refactor: Associate FinantialEntity to AcademicTreasuryEvent [#qubIT-Fenix-4587]
- Bug Fix: Create sibs payment request for ReservationTaxEventTarget, by finantial entity [#qubIT-Fenix-4587]
- Refactor: In method AcademicTariff#createDebitEntryForImprovement, do not create debit note. Instead create in AcademicTaxServices#createImprovementTax [#qubIT-Fenix-4587]
